<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Remora</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="http_protocol">http://</string>
    <string name="server_domain">ec2-52-0-168-55.compute-1.amazonaws.com/</string>
    <string name="login_password">dhh:secret</string>

    <!-- Generic -->
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="new_password">new password</string>
    <string name="old_password">old password</string>
    <string name="reenter_password">reenter new password</string>
    <string name="gender">gender</string>
    <string name="age">age</string>
    <string name="group">group</string>
    <string name="map">map</string>
    <string name="start_time">start time</string>
    <string name="end_time">end_time</string>
    <string name="location">location</string>
    <string name="description">description</string>
    <string name="save">save</string>
    <string name="add">add</string>
    <string name="search">search</string>

    <!-- Activity specific (format = "activity resource name"_"view element descriptor") -->
    <string name="activity_create_account_title">Account</string>
    <string name="activity_create_account_username">email address</string>
    <string name="activity_create_account_birthdate">birth date</string>
    <string name="activity_create_account_accept">create account</string>
    <string name="activity_view_profile_title">ViewProfileActivity</string>
    <string name="activity_view_group_title">ViewGroupActivity</string>
    <string name="activity_get_account_title">GetAccountActivity</string>

    <!-- Fragment specific (format = "fragment resource name"_"view element descriptor") -->
    <string name="fragment_account_credentials_title">Account Credentials</string>
    <string name="fragment_account_credentials_change_password">change password</string>
    <string name="fragment_profile_title">Profile</string>
    <string name="fragment_profile_description">description</string>
    <string name="create_account_frag_account_cred_title">Account Credentials</string>
    <string name="create_account_frag_email">email address</string>
    <string name="create_account_frag_password">password</string>
    <string name="fragment_event_header_default_name">Event Name</string>
    
    
    <!--Search stuff -->
    <string name="search_hint">enter tags</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_get_event">GetEventActivity</string>
    <string name="title_activity_create_group">CreateGroupActivity</string>
    <string name="title_activity_get_group_from_account">GetGroupFromAccountActivity</string>
    <string name="title_activity_get_events_from_account">GetEventsFromAccount</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_create">CreateActivity</string>


    <color name="list_item_background_color">#F2F2F2</color>

</resources>
