<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobileapp.jolono.remora.AccountCredentialsFragment"
    android:orientation="vertical">

    <TextView
        style="@style/RemoraTheme.FragmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_account_credentials_title"
        android:id="@+id/fragment_account_credentials_title"
        android:layout_column="0" />

    <TextView
        style="@style/RemoraTheme.FieldHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/fragment_account_credentials_email_header"
        android:layout_column="0" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_account_credentials_change_password"
        android:id="@+id/button2" />
</LinearLayout>
