<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.mobileapp.jolono.remora.ProfileFragment"
    android:orientation="vertical"
    android:id="@+id/fragment_profile_base">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_profile_title"
        android:id="@+id/textView2"
        style="@style/RemoraTheme.FragmentTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Full Name"
        android:id="@+id/fragment_profile_name" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:id="@+id/textView4"
                android:layout_column="0"
                style="@style/RemoraTheme.FieldHeader" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="21"
                android:id="@+id/fragment_profile_age"
                android:layout_column="1"
                android:layout_marginLeft="@dimen/header_field_separation" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:id="@+id/textView5"
                android:layout_column="0"
                style="@style/RemoraTheme.FieldHeader" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="male"
                android:id="@+id/fragment_profile_gender"
                android:layout_column="1"
                android:layout_marginLeft="@dimen/header_field_separation" />

        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_profile_description"
        android:id="@+id/textView6"
        style="@style/RemoraTheme.FieldHeader" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/fragment_profile_description" />

</LinearLayout>
